--- a/ruido_madrid_dd.Rmd
+++ b/ruido_madrid_dd.Rmd
@@ -2,15 +2,23 @@
 title: "Análisis del ruido en Madrid"
 output: html_notebook
 ---
+```{r}
+library("dplyr")
+```
 
 
 ```{r}
-df <- read.csv(file = './data/datos_ruido_madrid.csv', header = FALSE, sep = ';')
-colnames(df) <- c("Station","Year","Month","Day","Period","LAeq","LAS01","LAS10","LAS50","LAS90","LAS99")
-df$Date <- as.Date(with(df, paste(Year, Month, Day,sep="-")), "%Y-%m-%d")
-df[,c("Year","Month","Day")] <- NULL
-df[order(df$Date),]
-head(df)
+data <- read.csv(file = './data/datos_ruido_madrid.csv', header = FALSE, sep = ';')
+
+colnames(data) <- c("Station","Year","Month","Day","Period","LAeq","LAS01","LAS10","LAS50","LAS90","LAS99")
+
+data$Date <- as.Date(with(data, paste(Year, Month, Day,sep="-")), "%Y-%m-%d")
+# df[,c("Year","Month","Day")] <- NULL
+data <- data[order(data$Date),]
+head(data)
 ```
 
+```{r}
+group_by(Data,Month)
+```
 
