--- a/ruido_madrid_dd.Rmd
+++ b/ruido_madrid_dd.Rmd
@@ -8,7 +8,7 @@ library("dplyr")
 
 
 ```{r}
-data <- read.csv(file = './data/datos_ruido_madrid.csv', header = FALSE, sep = ';')
+data <- read.csv(file = './data/datos_ruido_madrid.csv', header = FALSE, sep = ';', strip.white = TRUE)
 
 colnames(data) <- c("Station","Year","Month","Day","Period","LAeq","LAS01","LAS10","LAS50","LAS90","LAS99")
 
@@ -19,6 +19,79 @@ head(data)
 ```
 
 ```{r}
-group_by(Data,Month)
+#group_by(data,Month).avg()
+
+Lmean_by_month_2015 <- data %>%  group_by(Month) %>% 
+  filter(Year==2015)%>%
+  filter(Period=='T')%>%
+                               summarise(mean_LAeq = mean(LAeq), 
+                                         mean_LAS01 = mean(LAS01),
+                                         mean_LAS10 = mean(LAS10),
+                                         mean_LAS50 = mean(LAS50),
+                                         mean_LAS99 = mean(LAS99)
+                                         )
+
+Lmean_by_month_2016 <- data %>%  group_by(Month) %>% 
+  filter(Year==2016)%>%
+  filter(Period=='T')%>%
+                               summarise(mean_LAeq = mean(LAeq), 
+                                         mean_LAS01 = mean(LAS01),
+                                         mean_LAS10 = mean(LAS10),
+                                         mean_LAS50 = mean(LAS50),
+                                         mean_LAS99 = mean(LAS99)
+                                         )
+
+Lmean_by_month_2017 <- data %>%  group_by(Month) %>% 
+  filter(Year==2017)%>%
+  filter(Period=='T')%>%
+                               summarise(mean_LAeq = mean(LAeq), 
+                                         mean_LAS01 = mean(LAS01),
+                                         mean_LAS10 = mean(LAS10),
+                                         mean_LAS50 = mean(LAS50),
+                                         mean_LAS99 = mean(LAS99)
+                                         )
+
+Lmean_by_month_2018 <- data %>%  group_by(Month) %>% 
+  filter(Year==2018)%>%
+  filter(Period=='T')%>%
+                               summarise(mean_LAeq = mean(LAeq), 
+                                         mean_LAS01 = mean(LAS01),
+                                         mean_LAS10 = mean(LAS10),
+                                         mean_LAS50 = mean(LAS50),
+                                         mean_LAS99 = mean(LAS99)
+                                         )
+
+Lmean_by_month_2019 <- data %>%  group_by(Month) %>% 
+  filter(Year==2019)%>%
+  filter(Period=='T')%>%
+                               summarise(mean_LAeq = mean(LAeq), 
+                                         mean_LAS01 = mean(LAS01),
+                                         mean_LAS10 = mean(LAS10),
+                                         mean_LAS50 = mean(LAS50),
+                                         mean_LAS99 = mean(LAS99)
+                                         )
+
+
+Lmean_by_month_2020 <- data %>%  group_by(Month) %>% 
+  filter(Year==2020)%>%
+  filter(Period=='T')%>%
+                               summarise(mean_LAeq = mean(LAeq), 
+                                         mean_LAS01 = mean(LAS01),
+                                         mean_LAS10 = mean(LAS10),
+                                         mean_LAS50 = mean(LAS50),
+                                         mean_LAS99 = mean(LAS99)
+                                         )
+
+```
+
+
+```{r}
+plot(Lmean_by_month_2015$mean_LAeq,type="l",col="red",ylim = c(55,65))
+lines(Lmean_by_month_2016$mean_LAeq,type="l",col="red")
+lines(Lmean_by_month_2017$mean_LAeq,type="l",col="red")
+lines(Lmean_by_month_2018$mean_LAeq,type="l",col="red")
+lines(Lmean_by_month_2019$mean_LAeq,type="l",col="red")
+lines(Lmean_by_month_2020$mean_LAeq,col="green")
+
 ```
 
