--- a/ruido_madrid_dd.Rmd
+++ b/ruido_madrid_dd.Rmd
@@ -11,6 +11,7 @@ library('gridExtra')
 
 ```{r}
 df <- read.csv(file = './data/datos_ruido_madrid.csv', header = FALSE, sep = ';', strip.white = TRUE)
+dfs <- read.csv(file = './data/EstacionesMedidaControlAcustico.csv', header = FALSE, sep = ';', strip.white = TRUE, fileEncoding = "ISO-8859-1")
 
 colnames(df) <- c("Station","Year","Month","Day","Period","LAeq","LAS01","LAS10","LAS50","LAS90","LAS99")
 
@@ -19,12 +20,41 @@ df$Date <- as.Date(with(df, paste(Year, Month, Day,sep="-")), "%Y-%m-%d")
 head(df)
 ```
 
+```{r}
+
+dfs <- read.csv(file = './data/EstacionesMedidaControlAcustico.csv', header = TRUE, sep = ';', strip.white = TRUE, fileEncoding = "ISO-8859-1")
+
+dfs$COD_VIA <- NULL
+dfs$VIA_CLASE <- NULL
+dfs$VIA_PAR <- NULL
+dfs$VIA_NOMBRE <- NULL
+dfs$Dirección <- NULL
+
+dfs <- dfs %>% 
+  rename(
+    Station=Nº,
+    NameStation = Nombre
+    )
+
+
+head(dfs)
+
+```
+
+
+```{r}
+df <- merge(df, dfs, by = "Station", all.x = TRUE)
+head(df)
+
+```
+
+
 Calculamos la media de los índices por año, mes, estación y periodo, y añadimos las variables al dataframe.
 
 ```{r}
 
 meanLAeqByMonthStationAndPeriod <- df %>% 
-    group_by(Year,Month, Station, Period) %>% 
+    group_by(Year,Month, NameStation, Period) %>% 
     summarise(meanLAeqByMonth = mean(LAeq), 
               meanLAS01ByMonth = mean(LAS01), 
               meanLAS10ByMonth = mean(LAS10),
@@ -32,7 +62,7 @@ meanLAeqByMonthStationAndPeriod <- df %>%
               meanLAS90ByMonth = mean(LAS90),
               meanLAS99ByMonth = mean(LAS99))
 
-df <- merge(df, meanLAeqByMonthStationAndPeriod, by = c("Year","Month", "Station", "Period"), all.x = TRUE)
+df <- merge(df, meanLAeqByMonthStationAndPeriod, by = c("Year","Month", "NameStation", "Period"), all.x = TRUE)
 
 colnames(df)
 
@@ -42,20 +72,27 @@ head(df)
 Nos centramos únicamente en el índice LAeq durante el periodo 'T'. Nos interesa conocer la media mensual por año de ese índice para cada una de las estaciones de Madrid. 
 
 ```{r}
- b <- df %>%  filter(Year==2015) %>% filter(Period == "T")
+ dfPeriodT <- df %>% filter(Period == "T")
+
+dfMeanLAeqByMonth <- distinct(dfPeriodT, Year, Month, NameStation, meanLAeqByMonth)
+
+# Year as factor in order to facilitate the choice of colors in the plot
+dfMeanLAeqByMonth$Year <- factor(dfMeanLAeqByMonth$Year)
 
 ```
 
 
+
 ```{r, fig.width = 10, fig.height = 20}
 
-ggplot(b, aes(x = Month, y = meanLAeqByMonth)) +
- geom_point(color="steelblue", size=1)  +
- geom_line(color="steelblue", size=0.5)  +
- facet_wrap(~ Station, ncol = 3, scales="free") +
-  labs(title = "Comparación LAeq ",
-       subtitle = "Comparación evolución LAeq promedio años (2015-2019) y 2020 para las distintas estaciones",
-       y = "Media mensual LAeq", x = "Mes")
+ggplot(dfMeanLAeqByMonth, aes(x = Month, y = meanLAeqByMonth, group=Year)) +
+  geom_point(aes(color=Year), size=2)  +
+  geom_line(aes(color=Year))  +
+  facet_wrap(~ NameStation, ncol = 3, scales="free") +
+  labs(title = "Comparación del índice LAeq medido en las distintas estaciones a lo largo de los años",
+       subtitle = "Se ha realizado la media mensual de los datos recopilados en cada una de las estaciones",
+       y = "Media mensual LAeq") +
+ theme(legend.position="top")
 ```
 
 
