--- a/ruido_madrid_dd.Rmd
+++ b/ruido_madrid_dd.Rmd
@@ -12,8 +12,7 @@ library('gridExtra')
 ```
 
 ```{r}
-Sys.setlocale("LC_TIME")
-
+Sys.setlocale("LC_TIME", "en_US.UTF-8")
 ```
 
 
@@ -95,6 +94,7 @@ dfMeanLAeqByMonth$Year <- factor(dfMeanLAeqByMonth$Year)
 
 
 
+
 ```{r, fig.width=12, fig.height=8}
 
 ggplot(dfMeanLAeqByMonth, aes(x = ordered(MonthName,levels=month.name), y = meanLAeqByMonth, group=Year)) +
@@ -144,24 +144,41 @@ dfCovidEffect <- dfCovidEffect %>% filter(Month>2, Month<6)
 
 dfCovidEffect <- dfCovidEffect[, c('Date', 'StationName','LAeq', 'meanLAeqByDayMonth_2015_2019')]
 
+colnames(dfCovidEffect) <- c("Date","StationName","LAeq_2020","LAeq_2015_2019")
+
+
 head(dfCovidEffect)
 
 ```
 
 ```{r}
+
 dfCovidEffectMelted <- reshape2::melt(dfCovidEffect, id.var=c('Date', 'StationName'))
+
+head(dfCovidEffectMelted)
+```
+
+```{r}
+
+colnames(dfCovidEffectMelted)[3] <- "LAeq"
 
 ```
 
 
 ```{r, fig.width=12, fig.height=8}
 
-ggplot(dfCovidEffectMelted, aes(x = Date, y = value, col=variable)) +
+ggplot(dfCovidEffectMelted, aes(x = Date, y = value, col=LAeq)) +
   geom_point(color='black',size=1)  +
   geom_line()  +
+  geom_rect(aes(xmin = as.Date("2020-03-16"), xmax = as.Date("2020-03-30"),ymin = -Inf, ymax = Inf),
+                   fill = "green", alpha = 0.002) +
+  geom_rect(aes(xmin = as.Date("2020-03-30"), xmax = as.Date("2020-04-13"),ymin = -Inf, ymax = Inf),
+                   fill = "red", alpha = 0.002) +
+  geom_rect(aes(xmin = as.Date("2020-04-13"), xmax = as.Date("2020-04-26"),ymin = -Inf, ymax = Inf),
+                   fill = "green", alpha = 0.002) +
   facet_wrap(~ StationName, ncol = 3, scales="free") +
   labs(title = "Comparación del índice de ruido LAeq diario para 2020 y la media de los años 2015-2019",
-       subtitle = "Subtítulo", y = "LAeq") +
+       subtitle = "(La media de los años 2015-2019 ha sido calculada para obtener una semana 'tipo')", y = "LAeq") +
  theme(legend.position="top")
 ```
 
